test/tests/bad/inf-type.carth
;; InfType

(define (infinite-type x) (infinite-type x infinite-type))
